--- a/kube/app-deployment.yml
+++ b/kube/app-deployment.yml
@@ -1,4 +1,3 @@
-
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -7,11 +6,15 @@ spec:
   selector:
     matchLabels:
       app: pennlabs
+      tier: frontend
+      track: stable
   replicas: 1
   template:
     metadata:
       labels:
         app: pennlabs
+        tier: frontend
+        track: stable
     spec:
       containers:
       - name: app
