--- a/kube/redis-deployment.yml
+++ b/kube/redis-deployment.yml
@@ -6,11 +6,15 @@ spec:
   selector:
     matchLabels:
       app: pennlabs
+      tier: backend
+      track: stable
   replicas: 1
   template:
     metadata:
       labels:
         app: pennlabs
+        tier: backend
+        track: stable
     spec:
       containers:
         - name: redis
